# financetracker

./: .gitignore  .pylintrc  MANIFEST.in  Pipfile  README.md  READNE.md  dodo.py  main.py  pyproject.toml  requirements.txt
config/: config.py
docs/source/: conf.py  handlers.rst  index.rst  models.rst  modules.rst
financetracker_bot/: main.py
financetracker_bot/data/: database.db
financetracker_bot/handlers/: budget_handler.py  expense_handler.py  user_handler.py
financetracker_bot/utils/: openai_util.py  translation.py
handlers/: budget_handler.py  expense_handler.py  user_handler.py
messages/ru/LC_MESSAGES/: messages.po
models/: finance_model.py
tests/: test_budget_handler.py  test_expense_handler.py  test_finance_model.py  test_openai_util.py  test_user_handler.py
utils/: openai_util.py  translation.py
