[project]
name = "financetracker_bot"
version = "1.0.0"
description = "A finance tracking Telegram bot"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Arseniy Litvinov and Farida Gaifutdinova"}
]
keywords = ["finance", "tracker", "telegram", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.urls]
repository = "https://github.com/gfarida/financetracker"
bugtracker = "https://github.com/gfarida/financetracker/issues"

[project.scripts]
financetracker_bot = "main:main"

[build-system]
requires = ["setuptools", "wheel", "coverage", "Sphinx", "build", "doit", "flake8", "pydocstyle", "pyfiglet"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
financetracker_bot = "financetracker_bot"

[tool.setuptools.package-data]
financetracker_bot = ["../docs/*", "*/*/*/*.mo"]
